@@ -1,0 +1,5 @@
+#!/usr/bin/python 
+
+# command = oslc("test.osl")
+# don't even need that -- it's automatic
+failureok = 1     # this test is expected to have oslc errors
